syntax = "proto3";

package gen_grpc;

// command：
// golang（proto 文件中不指定 go_package）：
//    protoc --go_out=. --go_opt=paths=source_relative --go_opt=Mapi.proto='social_server/src/gen/grpc;gen_grpc' --go-grpc_out=. --go-grpc_opt=paths=source_relative --go-grpc_opt=Mapi.proto='social_server/src/gen/grpc;gen_grpc' ./api.proto
// golang：
//    protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./api.proto
option go_package = "social_server/src/gen/grpc;gen_grpc";


// Session Service
service GrpcApi {
  // 会话
  rpc SessUserLogin(SessUserLoginReq) returns (SessUserLoginRes);
  rpc SessUserLogout(SessUserLogoutReq) returns (SessUserLogoutRes);

  // 用户管理
  rpc UmRegister(UmRegisterReq) returns (UmRegisterRes);
  rpc UmUnregister(UmUnregisterReq) returns (UmUnregisterRes);
  rpc UmAddFriend(UmAddFriendReq) returns (UmAddFriendRes);
  rpc UmDelFriend(UmDelFriendReq) returns (UmDelFriendRes);
  rpc UmGetFriendList(UmGetFriendListReq) returns (UmGetFriendListRes);

  // 聊天
  rpc ChatGetMsgList(ChatGetMsgListReq) returns (ChatGetMsgListRes);
  rpc ChatGetBoxMsgHist(ChatGetBoxMsgHistReq) returns (ChatGetBoxMsgHistRes);
  rpc ChatSendMsg(ChatSendMsgReq) returns (ChatSendMsgRes);
  rpc ChatCreateGroupConv(ChatCreateGroupConvReq) returns (ChatCreateGroupConvRes);
  rpc ChatGetGroupConvList(ChatGetGroupConvListReq) returns (ChatGetGroupConvListRes);
}

enum ErrCode {
  emErrCode_Ok = 0;
  emErrCode_UnknownErr = 1;

  emErrCode_UserNotRegistered = 10;
  emErrCode_UserAlreadyRegistered = 11;
  emErrCode_UserFailedToAuth = 12;

  emErrCode_SessNotExisted = 20;

  emErrCode_ConvIdNotExisted = 30;
  emErrCode_UserNotInConv = 31;
}

// 会话接口参数
message SessUserLoginReq {
  string userName = 1;
  string passphase = 2;
}
message SessUserLoginRes {
  ErrCode errCode = 1;
  string sessId = 2;
}

message SessUserLogoutReq {
  string sessId = 1;
}
message SessUserLogoutRes {
  ErrCode errCode = 1;
}

// 用户管理接口参数
message UmFriendInfo {
  string userName = 1;
  string nickName = 2;
  string remarkName = 3;
  // 添加朋友时不需要 uid
  uint64 uid = 4;
}

message UmRegisterReq {
  string userName = 1;
  string passphase = 2;
  string email = 3;
}
message UmRegisterRes {
  ErrCode errCode = 1;
}

message UmUnregisterReq {
  string sessId = 1;
}
message UmUnregisterRes {
  ErrCode errCode = 1;
}

message UmAddFriendReq {
  string sessId = 1;
  UmFriendInfo friend = 2;
}
message UmAddFriendRes {
  ErrCode errCode = 1;
}

message UmDelFriendReq {
  string sessId = 1;
  uint64 friendUid = 2;
}
message UmDelFriendRes {
  ErrCode errCode = 1;
}

message UmGetFriendListReq {
  string sessId = 1;
}
message UmGetFriendListRes {
  ErrCode errCode = 1;
  repeated UmFriendInfo friendList = 2;
}


// 聊天接口参数
message ChatPeerId {
  oneof PeerIdUnion {
    uint64 peerUid = 1;
    uint64 groupConvId = 2;
  }
}

enum ChatMsgType {
  emChatMsgType_Text = 0;
}

message ChatMsg {
  uint64 senderUid = 1;
  uint64 sentTsMs = 2;
  ChatMsgType msgType = 3;
  string msgContent = 4;
}

message ChatBoxMsg {
  ChatPeerId peerId = 1;
  ChatMsg msg = 2;
}

message ChatConvMsgList {
  uint64 convId = 1;
  repeated ChatMsg msgList = 2;
}

message ChatConvInfo {
  uint64 convId = 1;
  repeated uint64 uidList = 2;
}

message ChatGetMsgListReq {
  string sessId = 1;
}
message ChatGetMsgListRes {
  ErrCode errCode = 1;
  repeated ChatBoxMsg msgList = 2;
}

message ChatGetBoxMsgHistReq {
  string sessId = 1;
  ChatPeerId peerId = 2;
}
message ChatGetBoxMsgHistRes {
  ErrCode errCode = 1;
  repeated ChatMsg msgList = 2;
}

message ChatSendMsgReq {
  string sessId = 1;
  ChatBoxMsg boxMsg = 2;
}
message ChatSendMsgRes {
  ErrCode errCode = 1;
}

message ChatCreateGroupConvReq {
  string sessId = 1;
}
message ChatCreateGroupConvRes {
  ErrCode errCode = 1;
  uint64 convId = 2;
}

message ChatGetGroupConvListReq {
  string sessId = 1;
}
message ChatGetGroupConvListRes {
  ErrCode errCode = 1;
  repeated uint64 convIdList = 2;
}
